# exoterm

./: .gitignore  CLAUDE.md  README.md  TODO.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.claude/: launch.json  settings.local.json
docs/: PROJECT.md
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs  paths.rs  state.rs  watcher.rs
src-tauri/src/commands/: collections.rs  config.rs  games.rs  launch.rs  mod.rs
src-tauri/src/db/: mod.rs  queries.rs  queries_tests.rs  schema.rs
src-tauri/src/xml/: parser.rs
src/__tests__/: collectionPicker.test.tsx  commands-remaining.test.ts  commands.test.ts  dialog.test.tsx  extras.test.ts  filterEdgeCases.test.ts  filterPanel.test.tsx  filters.test.ts  gameList.test.tsx  guardedLaunch.test.ts  keyboard.test.ts  lightbox.test.tsx  menuBar.test.tsx  persist.test.ts  searchBar.test.tsx  setup.ts  statusBar.test.tsx  store.test.ts  videoPlayer.test.tsx
src/components/: CollectionPicker.tsx  DetailPanel.tsx  Dialog.tsx  FilterPanel.tsx  GameList.tsx  Lightbox.tsx  MenuBar.tsx  ResizeHandle.tsx  SearchBar.tsx  StatusBar.tsx  VideoPlayer.tsx
src/lib/: commands.ts  keyboard.ts  persist.ts  store.ts  types.ts
src/styles/: crt.css  dos.css  reset.css  themes.css
