[package]
name = "exodos-frontend"
version = "0.1.0"
description = "eXo Terminal - DOS-style frontend for eXo collections"
authors = ["will"]
edition = "2021"

[lib]
name = "exodos_frontend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.37"
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
tokio = { version = "1", features = ["sync"] }
